[project]
name = "ymos"
version = "3.1.0"
description = "YMOS - Your Market Operating System (勇麦投资操作系统)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "feedparser>=6.0.12",
    "requests>=2.33.1",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b",
    "futu>=0.0.1",
    "futu-api>=10.4.6408",
]

[project.scripts]
ymos = "cli.main:app"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["cli*"]
